<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:paddingBottom="8sp"
    android:paddingLeft="4sp"
    android:paddingRight="4sp"
    android:paddingTop="8sp"
    tools:context="com.shirunjie.drheartdemo.MonitorActivity">

    <TextView
        android:id="@+id/demo_switch_text"
        android:text="@string/demo_toggle_prompt" />

    <Switch
        android:id="@+id/demo_switch"
        android:textOff="@string/demo_on"
        android:textOn="@string/demo_off"
        android:checked="true" />

    <EditText
        android:id="@+id/manual_heart_rate"
        android:hint="@string/manual_heart_rate_hint"
        android:inputType="number"
        android:text="80"/>

    <Button
        android:id="@+id/submit_heart_rate"
        android:text="@string/submit"
        android:onClick="onclickSubmit"/>

    <TextView
        android:id="@+id/comment"
        android:text="Auto change: ">
    </TextView>

    <RadioGroup
        android:id="@+id/increment_group"
        android:layout_row="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3">

        <RadioButton
            android:id="@+id/increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase"
            android:onClick="onRadioModeClicked"/>

        <RadioButton
            android:id="@+id/decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease"
            android:onClick="onRadioModeClicked"/>

        <RadioButton
            android:id="@+id/constant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constant"
            android:onClick="onRadioModeClicked" />

    </RadioGroup>


    <TextView
        android:text="@string/lower_bound"/>
    <EditText
        android:id="@+id/lower_bound_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lower_bound_hint"
        android:inputType="number"
        android:text="60"/>
    <TextView
        android:text="@string/higher_bound"/>
    <EditText
        android:id="@+id/higher_bound_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/higher_bound_hint"
        android:inputType="number"
        android:text="100"/>


    <TextView
        android:id="@+id/main_view"
        android:layout_gravity="fill"
        android:gravity="center"
        android:textSize="88sp"
        android:layout_columnSpan="4"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/main_comment"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="4"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/start_btn"
        android:text="@string/start"
        android:onClick="onClickStart"/>
    <Button
        android:id="@+id/stop_btn"
        android:text="@string/stop"
        android:onClick="onClickStop"/>
    <Button
        android:id="@+id/pair_btn"
        android:text="@string/pair"
        android:onClick="onClickPair"/>
    <Button
        android:id="@+id/chat_btn"
        android:text="@string/chat"
        android:onClick="onClickChat"/>

</GridLayout>
